fixing alignment on page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,24 +21,37 @@ h3{
 h4{
   text-align : center;
 }
+.greetedButton{
+  text-align: center;
+}
+.homeBtn{
+  text-align: center;
+}
+.counterBtn{
+  text-align: center;
+}
+
+.listOfUsers{
+  text-align: center;
+}
 
 .clearBtn{
   text-align: center;
 }
 
-.greetedAncor{
+/* .greetedAncor{
     background-color: #199319;
     color: white;
     padding: 15px 25px;
     text-decoration: none;
-  }
+  } */
 
-  .greetedAncor{
+  /* .greetedAncor{
     background-color: #199319;
     color: white;
     padding: 15px 25px;
     text-decoration: none;
-  }
+  } */
   .homeAncor{
     background-color: #581993;
     color: white;
@@ -60,6 +73,13 @@ h4{
   }
 
   .button2 {background-color: #008CBA;}
+
+  .singleUser{
+    text-align: center;
+  }
+  .counterBtn{
+    text-align: center;
+  }
 
   /* container  */
   .container{
